dark mode stays on after refreshing or changing pages fix

--- a/dj/dj_app/static/base.css
+++ b/dj/dj_app/static/base.css
@@ -20,7 +20,7 @@ body {
 
 .dark-mode-switch label {
   display: inline-block;
-  width: 50px;
+  width: 55px;
   height: 30px;
   background-color: #ccc;
   border-radius: 15px;
